fixed carousel arrow z-index

--- a/src/scss/components/_slick_overides.scss
+++ b/src/scss/components/_slick_overides.scss
@@ -31,7 +31,7 @@ $slick-opacity-not-active: .25;
         height: 50px;
         background-color: rgba($light-font-color,.75);
         margin-top: -25px;
-        z-index: 10000;
+        z-index: 999;
     }
     .slick-prev:hover,
     .slick-prev:focus,
